log
Thu Apr 20 05:27:06 PM -04 2023: 
In file included from test.c:4:
treemap.c: In function ‘crearPair’:
treemap.c:31:16: error: incompatible types when returning type ‘void *’ but ‘Pair’ was expected
   31 |         return NULL;
      |                ^~~~
treemap.c: In function ‘createTreeNode’:
treemap.c:52:5: error: implicit declaration of function ‘createPair’; did you mean ‘crearPair’? [-Werror=implicit-function-declaration]
   52 |     createPair(pair ,key, value);
      |     ^~~~~~~~~~
      |     crearPair
cc1: all warnings being treated as errors
Compilation failed
2d8c985
Thu Apr 20 05:27:37 PM -04 2023: 
In file included from test.c:4:
treemap.c: In function ‘crearPair’:
treemap.c:31:16: error: incompatible types when returning type ‘void *’ but ‘Pair’ was expected
   31 |         return NULL;
      |                ^~~~
treemap.c: In function ‘createTreeNode’:
treemap.c:52:5: error: implicit declaration of function ‘createPair’; did you mean ‘crearPair’? [-Werror=implicit-function-declaration]
   52 |     createPair(pair ,key, value);
      |     ^~~~~~~~~~
      |     crearPair
cc1: all warnings being treated as errors
Compilation failed
83653e9
Thu Apr 20 05:27:52 PM -04 2023: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeNode’:
treemap.c:50:5: error: implicit declaration of function ‘createPair’; did you mean ‘crearPair’? [-Werror=implicit-function-declaration]
   50 |     createPair(pair ,key, value);
      |     ^~~~~~~~~~
      |     crearPair
cc1: all warnings being treated as errors
Compilation failed
309090f
Thu Apr 20 05:28:07 PM -04 2023: 
In file included from test.c:4:
treemap.c: In function ‘createTreeNode’:
treemap.c:50:5: error: implicit declaration of function ‘createPair’; did you mean ‘crearPair’? [-Werror=implicit-function-declaration]
   50 |     createPair(pair ,key, value);
      |     ^~~~~~~~~~
      |     crearPair
cc1: all warnings being treated as errors
Compilation failed
c49b6ae
Thu Apr 20 05:28:14 PM -04 2023: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
b8363c2
Thu Apr 20 05:49:29 PM -04 2023: 
 treemap.c | 114 ++++++++++++++++++++++++++++++++++++++------------------------
 1 file changed, 71 insertions(+), 43 deletions(-)
 tests:  0|0
2a8a294
Thu Apr 20 06:09:34 PM -04 2023: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
dbd144c
Thu Apr 20 06:13:11 PM -04 2023: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
043f59d
